--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,6 +3,9 @@ pipeline {
     tools {
         nodejs 'jose_nodejs 22' // Ensure that 'jose_nodejs 22' is correctly configured in Jenkins Global Tool Configuration
     }
+    environment {
+        FILE_PATH = '/home/joseph/input.txt' // Replace with your actual file path
+    }
 
     stages {
         stage('Hello') {
@@ -15,7 +18,7 @@ pipeline {
 
         stage('Version Check') {
             steps {
-                bat 'npm --version' // Ensure this is running on a Windows agent
+                bat 'npm --version' // Ensure this is running on a Windows agent. Use 'sh' for Unix-based systems.
             }
         }
 
@@ -26,5 +29,18 @@ pipeline {
                 }
             }
         }
-    }
-}
+
+        stage('Check File Path') {
+            steps {
+                script {
+                    if (fileExists(env.FILE_PATH)) {
+                        echo "File exists at ${env.FILE_PATH}"
+                    } else {
+                        error "File does not exist at ${env.FILE_PATH}"
+                    }
+                }
+            }
+        }
+    } // Close the 'stages' block
+
+} // Close the 'pipeline' block
