--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    environment {
+        DOCKER_CREDENTIALS = 'jose_dockerhub'  // Ensure this matches your Jenkins credentials ID
+    }
 
     stages {
         stage('Checkout') {
